# KernelLoopFission

./: CMakeLists.txt  run.sh  run_unroll.sh
include/: LoopInfoPass.h  helper.h
include/common/: helper.h
include/dependency-check/: KernelLoopFissionPass.h  LoopFissionDependencyAnalysis.h
include/loop-access/: ParallelLoopAnalysisPass.h
include/polly/: DependencyCheckResult.h  DeviceKernelLoopFissionPass.h  HostKernelLoopFissionPass.h  KernelLoopFissionPass.h  LoopFissionDependencyAnalysis.h  LoopFissionDependencyCheckPass.h  Pipeline.h
include/polly-old/: LoopFissionPass.h  LoopInfoPass.h
src/: LoopFissionPass.cpp  LoopInfoPass.cpp  main.cpp
src/dependency-check/: KernelLoopFissionPass.cpp  LoopFissionDependencyAnalysis.cpp  main.cpp
src/loop-access/: ParallelLoopAnalysisPass.cpp  main.cpp
src/polly/: DeviceKernelLoopFissionPass.cpp  HostKernelLoopFissionPass.cpp  KernelLoopFissionPass.cpp  LoopFissionDependencyAnalysis.cpp  LoopFissionDependencyCheckPass.cpp  Pipeline.cpp  main.cpp
src/polly-old/: LoopFissionPass.cpp  LoopInfoPass.cpp  main.cpp
tests/: CMakeLists.txt  build.sh
tests/adam-cuda/: main.cu  main_original.cu  reference.h
tests/atomicAggregate/: main.cu
tests/bn-cuda/: main_original.cu
tests/chemv-cuda/: kernel.cu  main.cu
tests/dense-embedding-cuda/: build.sh  main.cu
tests/f16max-cuda/: main.cu
tests/jaccard-cuda/: main.cu
tests/loop-ref/: a.out  build.sh  main copy.cpp  main.cpp  scopsonly._Z12non_parallelSt5arrayIiLm10EES0_S0_.dot  scopsonly._Z4scopSt5arrayIiLm10EES0_S0_.dot  scopsonly._Z8parallelSt5arrayIiLm10EES0_S0_.dot  scopsonly.main.dot
tests/mixbench-cuda/: main copy.cu  main.cu
tests/page-rank-cuda/: main.cu
tests/qrg-cuda/: main copy.cu  main.cu
tests/simple-loops/: build.sh  main.cpp
tests/spm-cuda/: main before float.cu  main copy.cu  main.cu
tests/vote-cuda/: main.cu
